tests/ui/no_item_generics.stderr
error: derive-where doesn't support items without generics, as this can already be handled by standard `#[derive()]`.
 --> tests/ui/no_item_generics.rs:2:1
  |
2 | struct Test(u8);
  | ^^^^^^^^^^^^^^^^
