tests/ui/no_item_generics.rs
#[derive_where::derive_where(Clone)]
struct Test(u8);

fn main() {}
